tests/NormalTests/paczka1/small_fuzzy/18258962.err
Error in line 4: Mg0lijpN V799 197,8
Error in line 8: HmjQ6 S31 65,6
Error in line 11: Mg0lijpN S31 42,00
Error in line 7: jhzFUVtPPN S764 95,4
